# orbital-witness

./: README.md  docker-compose.yml
client/: .dockerignore  .gitignore  Dockerfile  package.json  tsconfig.json
client/src/: App.tsx  index.tsx
client/src/api/: usageAPI.test.ts  usageApi.ts
client/src/components/: Chart.tsx  Dashboard.tsx  Table.tsx
client/src/types/: types.ts
client/src/utils/: sortData.test.ts  sortData.ts  useSorting.ts
server/: .dockerignore  Dockerfile  app.py  pyproject.toml
server/services/usage/: calculate_cost.py  constans.py  data_schema.py  get_usage.py
server/tests/test_usage/: test_calculate_cost.py  test_get_usage.py
