[tool.poetry]
name = "orbital"
version = "0.1.0"
description = "FastAPI backend"
authors = ["alexeygolev <alexeygolev@skyscanner.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
requests = "^2.32.3"
httpx = "^0.27.0"
pydantic = "^2.7.4"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
